Finished abstracting AspectInstance